<resources>
    <string name="app_name">kt_motivation</string>
    <string name="all_inclusive_description">"Infinite symbol "</string>
    <string name="happy_face_description">Happy Face Emoji</string>
    <string name="sunny_description">Sun icon</string>
    <string name="hello_kotlin">Olá, Kotlin!</string>
    <string name="new_phrase">Nova Frase</string>
    <string name="lets_begin">Vamos começar!</string>
    <string name="what_is_your_name">Qual é seu nome?</string>
    <string name="button_save_text">Salvar</string>
</resources>