<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/user_layout"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/purple">

    <TextView
        android:id="@+id/lets_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/cabin"
        android:text="@string/lets_begin"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cabin"
        android:hint="@string/what_is_your_name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="22sp"
        tools:ignore="Autofill,TextFields" />
    
    <Button
        android:id="@+id/button_save"
        android:text="@string/button_save_text"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"/>

</RelativeLayout>