<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:id="@+id/top_bar"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:id="@+id/ic_all_inclusive"
            android:contentDescription="@string/all_inclusive_description"
            android:src="@drawable/ic_all_inclusive_foreground"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:id="@+id/ic_happy_face"
            android:contentDescription="@string/happy_face_description"
            android:src="@drawable/ic_happy_face_foreground"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:id="@+id/ic_sunny"
            android:contentDescription="@string/sunny_description"
            android:src="@drawable/ic_sunny_foreground"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:text="Hello World" />

    <View
        android:layout_width="128dp"
        android:layout_height="5dp"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
        android:layout_below="@+id/text_phrase">

    </View>

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="Nova Frase"
        />


</RelativeLayout>